// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list.js should return the expected HTML 1`] = `
"<ol class=\\"c-list c-list--ordered\\"  >
        <li class=\\"c-list-item\\">
        
        <span>a</span>
        </li><li class=\\"c-list-item\\">
        
        <span>b</span>
        </li><li class=\\"c-list-item\\">
        
        <span>c</span>
        </li><li class=\\"c-list-item\\">
        
        <span>d</span>
        </li>
    </ol>"
`;

exports[`list.js should return the expected HTML 2`] = `
"<ul class=\\"c-list c-list--pill\\"  >
        <li class=\\"c-list-item\\">
        
        <span>a</span>
        </li><li class=\\"c-list-item\\">
        
        <span>b</span>
        </li><li class=\\"c-list-item\\">
        
        <span>c</span>
        </li><li class=\\"c-list-item\\">
        
        <span>d</span>
        </li>
    </ul>"
`;

exports[`list.js should return the expected HTML for an icon list 1`] = `
"<ul class=\\"c-list c-list--icon\\"  style=\\"--icon-fill: #017a39\\";>
        <li class=\\"c-list-item\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"presentation\\" focusable=\\"false\\" height=\\"20\\" width=\\"20\\" fill=\\"#017a39\\" class=\\"c-pieIcon c-pieIcon--closeCircleFilled u-iconFilled\\" aria-hidden=\\"true\\"><path fill=\\"#242E30\\" d=\\"M8 1.219A6.781 6.781 0 1 0 14.781 8 6.79 6.79 0 0 0 8 1.219Zm2.87 8.75-.927.927L8 8.927 6.058 10.87l-.928-.927L7.072 8 5.13 6.058l.928-.928L8 7.072 9.943 5.13l.927.928L8.928 8l1.942 1.969Z\\"></path></svg>
        <span>a</span>
        </li><li class=\\"c-list-item\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"presentation\\" focusable=\\"false\\" height=\\"20\\" width=\\"20\\" fill=\\"#017a39\\" class=\\"c-pieIcon c-pieIcon--closeCircleFilled u-iconFilled\\" aria-hidden=\\"true\\"><path fill=\\"#242E30\\" d=\\"M8 1.219A6.781 6.781 0 1 0 14.781 8 6.79 6.79 0 0 0 8 1.219Zm2.87 8.75-.927.927L8 8.927 6.058 10.87l-.928-.927L7.072 8 5.13 6.058l.928-.928L8 7.072 9.943 5.13l.927.928L8.928 8l1.942 1.969Z\\"></path></svg>
        <span>b</span>
        </li><li class=\\"c-list-item\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"presentation\\" focusable=\\"false\\" height=\\"20\\" width=\\"20\\" fill=\\"#017a39\\" class=\\"c-pieIcon c-pieIcon--closeCircleFilled u-iconFilled\\" aria-hidden=\\"true\\"><path fill=\\"#242E30\\" d=\\"M8 1.219A6.781 6.781 0 1 0 14.781 8 6.79 6.79 0 0 0 8 1.219Zm2.87 8.75-.927.927L8 8.927 6.058 10.87l-.928-.927L7.072 8 5.13 6.058l.928-.928L8 7.072 9.943 5.13l.927.928L8.928 8l1.942 1.969Z\\"></path></svg>
        <span>c</span>
        </li><li class=\\"c-list-item\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"presentation\\" focusable=\\"false\\" height=\\"20\\" width=\\"20\\" fill=\\"#017a39\\" class=\\"c-pieIcon c-pieIcon--closeCircleFilled u-iconFilled\\" aria-hidden=\\"true\\"><path fill=\\"#242E30\\" d=\\"M8 1.219A6.781 6.781 0 1 0 14.781 8 6.79 6.79 0 0 0 8 1.219Zm2.87 8.75-.927.927L8 8.927 6.058 10.87l-.928-.927L7.072 8 5.13 6.058l.928-.928L8 7.072 9.943 5.13l.927.928L8.928 8l1.942 1.969Z\\"></path></svg>
        <span>d</span>
        </li>
    </ul>"
`;
